force-app/main/default/objects/EYI_Applied_Offers_To_Quotation__c/EYI_Applied_Offers_To_Quotation__c.object-meta.xml
<CustomObject>
    <label>Applied Offers To Quotation</label>
    <nameField>
        <displayFormat>AO-{0000}</displayFormat>
        <label>Applied Offers To Quotation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applied Offers To Quotations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>