force-app/main/default/objects/EYI_Applied_Offers_To_Quotation__c/fields/EYI_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Amount__c</fullName>
    <formula>IF(EYI_Offer__r.Discount_in_per__c&gt;0,
 (EYI_Quote__r.EYI_Agreement_Value__c * (EYI_Offer__r.Discount_in_per__c / 100)),
  EYI_Offer__r.EYI_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>