force-app/main/default/objects/EYI_Applied_Offers_To_Quotation__c/fields/EYI_Discount_for_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>EYI_Discount_for_Agreement_Value__c</fullName>
    <formula>EYI_Quote__r.EYI_Agreement_Value__c *EYI_Offer__r.Discount_in_per__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount for Agreement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>