force-app/main/default/objects/EYI_Applied_Offers_To_Quotation__c/fields/EYI_Offer__c.field-meta.xml
<CustomField>
    <fullName>EYI_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <referenceTo>Offer__c</referenceTo>
    <relationshipLabel>Applied Offers To Quotations</relationshipLabel>
    <relationshipName>Applied_Offers_To_Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>