force-app/main/default/objects/EYI_Applied_Offers_To_Quotation__c/fields/EYI_Quote__c.field-meta.xml
<CustomField>
    <fullName>EYI_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Applied Offers To Quotations</relationshipLabel>
    <relationshipName>Applied_Offers_To_Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>