force-app/main/default/objects/EYI_Applied_Offers_To_Quotation__c/fields/Is_SD_applied__c.field-meta.xml
<CustomField>
    <fullName>Is_SD_applied__c</fullName>
    <description>This field is used capture SD paid by as Identifier.</description>
    <formula>IF(  ISPICKVAL(EYI_Offer__r.Source__c, &apos;SD (Stamp Duty)&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is SD applied?</label>
    <type>Checkbox</type>
</CustomField>